[package]
name = "mqtt-tiny"
version = "0.4.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "A tiny MQTT v3.1.1 codec implementation"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/mqtt-tiny-rust"
readme = "README.md"


[badges]
appveyor = { repository = "KizzyCode/mqtt-tiny-rust" }


[features]
#default = ["std", "backtrace"]
default = ["heapless"]
std = []
backtrace = []
arrayvec = ["dep:arrayvec"]
heapless = ["dep:heapless"]


[dependencies]

[dependencies.arrayvec]
version = "0.7.6"
optional = true
default-features = false

[dependencies.heapless]
version = "0.8.0"
optional = true
default-features = false

[dev-dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
